# corrupt-cv

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  buf.gen.yaml  docker-compose.yml  go.work  go.work.sum  justfile  pyproject.toml
.github/workflows/: ai-processor.yml  ci.yaml  cv-generator.yml  e2e.yml  gateway.yml  images.yml  proto.yml
config/: models.yaml
configs/: model-catalog.yaml
deploy/compose/: Dockerfile.migrate  compose.yaml  otel-collector.yaml
deploy/compose/grafana/dashboards/: cvgen.json
deploy/k8s/apps/: ai-processor.yaml  certificate.yaml  cv-generator.yaml  externalsecret.yaml  gateway-api.yaml  gateway.yaml  kustomization.yaml
deploy/k8s/canary/: canary.yaml  kustomization.yaml  metric-templates.yaml  vmrule.yaml
deploy/k8s/db/: cluster.yaml
deploy/k8s/image-automation/: automation.yaml  image-policies.yaml  image-repos.yaml  kustomization.yaml
deploy/k8s/infra/: flagger-loadtester.yaml  flagger-scrape.yaml  flagger.yaml  helmrepos.yaml  kustomization.yaml  namespaces.yaml  nats.yaml  valkey.yaml
deploy/k8s/migrations/: job.yaml  kustomization.yaml
docs/: CONVENTIONS.md  brief.md  roadmap.md
docs/adr/: 0001-monorepo-layout-and-tooling.md  0001-monorepo.md  0002-gin-gateway-htmx-split-servers.md  0002-htmx-gin-server-rendered-ui.md  0003-async-choreography-nats-jetstream.md  0003-protobuf-contracts-buf.md  0004-jetstream-single-authority-provisioning.md  0004-protobuf-buf-contracts.md  0005-byo-key-transient-valkey.md  0005-event-carried-state-per-job-subjects.md  0006-byo-api-key-valkey-handoff.md  0006-pydanticai-multiprovider.md  0007-model-catalog-nats-kv.md  0007-typst-pdf-native-sysinputs.md  0008-gateway-sole-postgres-owner.md  0008-postgres-goose-s3-swift.md  0009-observability-victoria-otel-vector.md  0009-typst-sys-inputs-contract.md  0010-otel-victoria-observability-profile.md  0010-storage-opendal-python-awssdk-go.md  0011-anonymous-sessions-byo-key-v1.md  0011-uv-workspace-shared-cvworker.md  0012-config-driven-model-registry.md  0012-k8s-flux-flagger-topology.md  0013-opentofu-s3-ssm-eso.md  0014-natsio-client.md  0015-deployment-alerting.md
docs/k8s/: homelab-integration.md
infra/opentofu/: .gitignore  README.md  backend.example.hcl  iam.tf  outputs.tf  s3.tf  ssm.tf  variables.tf  versions.tf
libs/cvworker/: pyproject.toml
libs/cvworker/cv_worker/: __init__.py  bus.py  log.py  mapping.py  models.py  ops.py  settings.py  telemetry.py
libs/python/cv-shared/: pyproject.toml
libs/python/cv-shared/src/cv_shared/: consumer.py  health.py  logging.py  models.py  natsx.py  otel.py  proto_convert.py  settings.py  typst_json.py
libs/python/cv-shared/src/cvgen/catalog/v1/: catalog_pb2.py  catalog_pb2.pyi
libs/python/cv-shared/src/cvgen/cv/v1/: cv_pb2.py  cv_pb2.pyi
libs/python/cv-shared/src/cvgen/events/v1/: events_pb2.py  events_pb2.pyi
libs/python/cv-shared/tests/: test_otel.py  test_proto_convert.py  test_typst_json.py
migrations/: 0001_init.sql
observability/: otel-collector-config.yaml  vector.yaml  victoriametrics-scrape.yml
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
proto/: buf.gen.yaml
proto/cv/v1/: cv.proto  generation.proto
proto/cvgen/catalog/v1/: catalog.proto
proto/cvgen/cv/v1/: cv.proto
proto/cvgen/events/v1/: events.proto
scripts/: e2e.sh  smoke.sh
scripts/localstack/: init-s3.sh
services/ai-processor/: Dockerfile  pyproject.toml
services/ai-processor/ai_processor/: agent.py  main.py  secrets.py  settings.py
services/ai-processor/src/ai_processor/: agent.py  fake.py  handler.py  main.py  prompts.py  providers.py  settings.py
services/ai-processor/tests/: test_agent.py  test_ai_agent.py  test_ai_handler.py
services/cv-generator/: Dockerfile  pyproject.toml
services/cv-generator/assets/: cv.typ
services/cv-generator/cv_generator/: main.py  render.py  settings.py  storage.py
services/cv-generator/cv_generator/templates/: cv.typ
services/cv-generator/src/cv_generator/: handler.py  main.py  renderer.py  settings.py  storage.py
services/cv-generator/tests/: test_cvgen_handler.py  test_render.py  test_renderer_golden.py
services/gateway/: Dockerfile  go.mod  go.sum  sqlc.yaml
services/gateway/cmd/gateway/: main.go
services/gateway/cmd/migrate/: main.go
services/gateway/internal/apikeys/: apikeys.go
services/gateway/internal/bus/: bus.go
services/gateway/internal/catalog/: catalog.go  catalog_test.go
services/gateway/internal/config/: config.go
services/gateway/internal/httpapi/: handlers.go  server.go  sse.go  view.go  view_test.go
services/gateway/internal/jetstream/: jetstream.go
services/gateway/internal/jobs/: jobs.go
services/gateway/internal/modelcfg/: registry.go  registry_test.go
services/gateway/internal/ops/: ops.go
services/gateway/internal/s3/: s3.go
services/gateway/internal/secrets/: secrets.go
services/gateway/internal/session/: session.go  session_test.go
services/gateway/internal/storage/: storage.go
services/gateway/internal/store/: store.go
services/gateway/internal/telemetry/: fanout.go  nats.go  telemetry.go  telemetry_test.go
services/gateway/web/: web.go
(+19 files in other folders)
