[project]
name = "cv-monorepo"
version = "0"
requires-python = ">=3.13,<3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["proto/gen/python", "libs/cvworker", "services/ai-processor", "services/cv-generator"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# Generated protobuf stubs are not ours to lint.
exclude = ["proto/gen/python/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
