[project]
name = "cv-worker"
version = "0.1.0"
description = "Shared worker runtime: settings, logging, OTel, NATS bus, health, CV models + proto mapping."
requires-python = ">=3.13,<3.14"
dependencies = [
    "cv-contracts",
    "nats-py>=2.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=25",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-exporter-prometheus>=0.48b0",
    "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cv-contracts = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["cv_worker"]
