[project]
name = "cv-generator"
version = "0.1.0"
description = "Consumes cv.*.structured, renders a Typst PDF, uploads to S3 via OpenDAL, emits cv.*.completed."
requires-python = ">=3.13,<3.14"
dependencies = [
    "cv-worker",
    "cv-contracts",
    "typst>=0.11",
    "opendal>=0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cv-worker = { workspace = true }
cv-contracts = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["cv_generator"]
