[project]
name = "cv-generator"
version = "0.1.0"
description = "Renders structured CVs to PDF via Typst and uploads them to object storage"
requires-python = ">=3.13"
dependencies = [
    "cv-shared",
    "typst>=0.15",
    "opendal>=0.45",
]

[project.scripts]
cv-generator = "cv_generator.main:main"

[tool.uv.sources]
cv-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_generator"]
