[project]
name = "cv-shared"
version = "0.1.0"
description = "Shared models, proto converters, and NATS/OTel/logging helpers for CV generator services"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.10",
    "protobuf>=6.31",
    "structlog>=25.4",
    "opentelemetry-api>=1.36",
    "opentelemetry-sdk>=1.36",
    "opentelemetry-exporter-otlp-proto-http>=1.36",
    "natsio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_shared", "src/cvgen"]
